# profiles-rest-api

./: .gitignore  LICENSE  README.md  Vagrantfile  pyproject.toml
deploy/: setup.sh  update.sh
profiles_api/: models.py  permissions.py  serializers.py  urls.py  views.py
profiles_project/: settings.py  urls.py
